--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
 
-
-/*# sourceMappingURL=style.css.map */
+.container {
+  margin: auto;
+  width: 100%;
+  max-width: 1200px;
+}/*# sourceMappingURL=style.css.map */
