--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,78 @@
   font-family: "Poppins", sans-serif;
 }
 
+body {
+  background: rgb(227, 230, 245);
+}
+
 .container {
   margin: auto;
   width: 100%;
   max-width: 1200px;
+}
+
+.loginbox,
+.registerbox {
+  border: 1px solid black;
+  height: 100%;
+  justify-content: center;
+  display: flex;
+  padding-bottom: 50px;
+}
+.loginbox form,
+.registerbox form {
+  margin: 50px 0px;
+  border: 1px solid rgb(217, 216, 235);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  margin-top: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 6px -1px rgb(156, 156, 156), -3px -4px 8px 0px rgb(255, 255, 255);
+}
+.loginbox form .logo,
+.registerbox form .logo {
+  padding: 3px;
+  box-shadow: 3px 3px 6px -1px rgb(156, 156, 156), -3px -4px 8px 0px rgb(255, 255, 255);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin-bottom: 20px;
+}
+.loginbox form .logo img,
+.registerbox form .logo img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.loginbox form select, .loginbox form input,
+.registerbox form select,
+.registerbox form input {
+  background: rgba(0, 0, 0, 0);
+  outline: none;
+  width: 100%;
+  border: none;
+  padding: 10px;
+  margin: 5px 0px;
+  border-radius: 5px;
+  box-shadow: inset 3px 3px 6px -1px rgb(156, 156, 156), inset -3px -4px 8px 0px rgb(255, 255, 255);
+}
+.loginbox form a,
+.registerbox form a {
+  margin: 20px 0px;
+  color: rgb(41, 41, 41);
+  text-decoration: none;
+}
+.loginbox form .submit,
+.registerbox form .submit {
+  box-shadow: 3px 3px 6px -1px rgb(156, 156, 156), -3px -4px 8px 0px rgb(255, 255, 255);
+}
+.loginbox form .submit:hover,
+.registerbox form .submit:hover {
+  box-shadow: inset 3px 3px 6px -1px rgb(156, 156, 156), inset -3px -4px 8px 0px rgb(255, 255, 255);
 }/*# sourceMappingURL=style.css.map */
