--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,9 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body{
+    background: rgb(227, 230, 245);
+}
 .container{
     margin: auto;
     width: 100%;
