--- a/css/_form.scss
+++ b/css/_form.scss
@@ -1,6 +1,6 @@
 .loginbox,
 .registerbox {
-    border: 1px solid black;
+ 
   height: 100%;
   justify-content: center;
   display: flex;
@@ -35,24 +35,39 @@
    select, input {
         background: rgba(0, 0, 0, 0);
         outline: none;
-      width: 100%;
-      border: none;
+        width: 100%;
+        border: none;
         padding: 10px;
         margin: 5px 0px;
         border-radius: 5px;
         box-shadow:inset 3px 3px 6px -1px rgb(156, 156, 156),inset -3px -4px 8px 0px rgb(255, 255, 255);
    
-    }
-    a {
+      }
+      a {
         margin: 20px 0px;
         color: rgb(41, 41, 41);
         text-decoration: none;
     }
     .submit{
+      border: 1px solid rgb(224, 224, 224);
         box-shadow: 3px 3px 6px -1px rgb(156, 156, 156), -3px -4px 8px 0px rgb(255, 255, 255);
    &:hover{
     box-shadow:inset 3px 3px 6px -1px rgb(156, 156, 156),inset -3px -4px 8px 0px rgb(255, 255, 255);
    }
     }
   }
+}
+// ----------------------------------------------------------
+@media only screen and (max-width: 500px) {
+  .loginbox,
+.registerbox {
+align-items: center;
+height: 100%;
+  form {
+    box-shadow: none;
+    width: 100%;
+    border: none;
+    height: 100%;    
+  }
+}
 }
