--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
 
 .loginbox,
 .registerbox {
-  border: 1px solid black;
   height: 100%;
   justify-content: center;
   display: flex;
@@ -75,9 +74,25 @@ body {
 }
 .loginbox form .submit,
 .registerbox form .submit {
+  border: 1px solid rgb(224, 224, 224);
   box-shadow: 3px 3px 6px -1px rgb(156, 156, 156), -3px -4px 8px 0px rgb(255, 255, 255);
 }
 .loginbox form .submit:hover,
 .registerbox form .submit:hover {
   box-shadow: inset 3px 3px 6px -1px rgb(156, 156, 156), inset -3px -4px 8px 0px rgb(255, 255, 255);
+}
+
+@media only screen and (max-width: 500px) {
+  .loginbox,
+.registerbox {
+    align-items: center;
+    height: 100%;
+  }
+  .loginbox form,
+.registerbox form {
+    box-shadow: none;
+    width: 100%;
+    border: none;
+    height: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
