--- a/css/style.scss
+++ b/css/style.scss
@@ -1,19 +1,100 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-body{
-    background: rgb(227, 230, 245);
+body {
+  background: rgb(227, 230, 245);
 }
-.container{
-    margin: auto;
-    width: 100%;
-    max-width: 1200px;
+.container {
+  margin: auto;
+  width: 100%;
+  max-width: 1200px;
 }
+.header {
+  border-bottom: 1px solid rgb(169, 169, 169);
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+  .toggle {
+    display: none;
+    .show,
+    .hide {
+      ion-icon {
+      }
+    }
+  }
+  .logo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    img {
+        border: 1px solid rgb(212, 219, 236);
+        padding: 5px;
+        box-shadow: 2px 2px 6px rgb(85, 85, 85), -2px -2px 6px rgb(255, 255, 255);
+      border-radius: 50%;
+      width: 100%;
+      aspect-ratio: 1/1;
+    }
+  }
+  nav {
+    ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      a {
+        text-decoration: none;
+        color: rgb(56, 56, 56);
+        margin: 0px 10px;
+        font-weight: 600;
+        letter-spacing: 1px;
+      }
+    }
+  }
+  .extralink {
+    color: black;
+
+    display: flex;
+    .user {
+      margin: 0px 10px;
+      a {
+        ion-icon {
+          color: rgb(0, 0, 0);
+
+          font-size: 25px;
+        }
+      }
+    }
+    .addcart {
+      position: relative;
+      span {
+        position: absolute;
+        top: -5px;
+        left: -3px;
+        padding: 1px;
+        width: 15px;
+        height: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        background: rgb(25, 25, 25);
+        color: rgb(235, 235, 235);
+        z-index: 1;
+        font-size: 13px;
+      }
+      ion-icon {
+        font-size: 25px;
+        color: black;
+      }
+    }
+  }
+}
+
 
 @import "form";
 @import "home";
