--- a/css/_home.scss
+++ b/css/_home.scss
@@ -3,8 +3,8 @@
     padding-bottom: 20px;
     .adsbox {
       height: max-content;
-        margin: 20px;
-        padding: 0px;
+      margin: 20px;
+      padding: 0px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -52,25 +52,21 @@
     }
     .productbox {
       display: flex;
-      justify-content: start;
       flex-wrap: wrap;
       .card {
-        
-       max-width: 39vmin;
-       width: 100%;
-
+        min-width: 200px;
+        width: 30%;
         border: 1px solid rgb(208, 230, 245);
         border-radius: 5px;
         margin: 20px;
-        padding: 12px;
+        padding: 3px;
         box-shadow: 3px 3px 6px rgb(145, 145, 145),
           -4px -4px 8px rgb(255, 255, 255);
         .card1 {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-          text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
           border-radius: 5px;
           padding: 10px;
           box-shadow: inset 2px 2px 6px rgb(112, 112, 112),
@@ -78,12 +74,12 @@
           .image {
             background: #000;
             width: 100%;
-         aspect-ratio: 1/1;
-        
+            aspect-ratio: 1/1;
+
             img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
             }
           }
           .price {
@@ -96,7 +92,7 @@
             border: none;
             background: rgba(0, 0, 0, 0);
             box-shadow: 2px 2px 4px rgb(174, 174, 174),
-            -2px -2px 4px rgb(255, 255, 255);
+              -2px -2px 4px rgb(255, 255, 255);
             margin: 3px 0px;
           }
         }
