--- a/css/style.scss
+++ b/css/style.scss
@@ -24,7 +24,12 @@ body {
     display: none;
     .show,
     .hide {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       ion-icon {
+        font-size: 30px;
+        cursor: pointer;
       }
     }
   }
@@ -33,9 +38,9 @@ body {
     height: 50px;
     border-radius: 50%;
     img {
-        border: 1px solid rgb(212, 219, 236);
-        padding: 5px;
-        box-shadow: 2px 2px 6px rgb(85, 85, 85), -2px -2px 6px rgb(255, 255, 255);
+      border: 1px solid rgb(212, 219, 236);
+      padding: 5px;
+      box-shadow: 2px 2px 6px rgb(85, 85, 85), -2px -2px 6px rgb(255, 255, 255);
       border-radius: 50%;
       width: 100%;
       aspect-ratio: 1/1;
@@ -95,6 +100,45 @@ body {
   }
 }
 
+@media only screen and (max-width: 500px) {
+  .header {
+    .toggle {
+      display: block;
+      .show{
 
+      }
+      .hide {
+        display: none;
+        ion-icon {
+        }
+      }
+    }
+    .logo {
+      img {
+      }
+    }
+    nav {
+      display: none;
+      ul {
+        a {
+        }
+      }
+    }
+    .extralink {
+      .user {
+        a {
+          ion-icon {
+          }
+        }
+      }
+      .addcart {
+        span {
+        }
+        ion-icon {
+        }
+      }
+    }
+  }
+}
 @import "form";
 @import "home";
