--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,7 @@ body {
   max-width: 1200px;
 }
 .header {
+  position: relative;
   border-bottom: 1px solid rgb(169, 169, 169);
   display: flex;
   justify-content: space-between;
@@ -99,7 +100,18 @@ body {
     }
   }
 }
+.cartbox{
+position: absolute;
 
+}
+
+
+
+
+
+
+
+// --------------------
 @media only screen and (max-width: 500px) {
   .header {
     .toggle {
@@ -140,5 +152,8 @@ body {
     }
   }
 }
+
+
 @import "form";
 @import "home";
+@import "shop";
