--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 .container {
+  overflow: hidden;
   margin: auto;
   width: 100%;
   max-width: 1200px;
@@ -97,9 +98,127 @@ body {
   font-size: 25px;
   color: black;
 }
-
-.cartbox {
+.header .cartbox {
+  transition: 1s;
   position: absolute;
+  top: 100%;
+  right: -50%;
+  background: rgb(224, 224, 224);
+  color: aliceblue;
+  padding: 10px;
+}
+.header .cartbox .head {
+  border-bottom: 1px solid rgb(128, 128, 128);
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  color: #000;
+}
+.header .cartbox .head .item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  border-radius: 5px;
+}
+.header .cartbox .head .item ion-icon {
+  margin: 0px 10px;
+}
+.header .cartbox .head .closecart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  color: aqua;
+  background: rgb(39, 39, 39);
+}
+.header .cartbox .head .closecart ion-icon {
+  font-size: 24px;
+}
+.header .cartbox .cartlist {
+  width: 300px;
+  padding: 10px;
+}
+.header .cartbox .cartlist .cartcard {
+  margin: 10px 0px;
+  display: flex;
+  border-radius: 5px;
+  box-shadow: 2px 2px 6px rgb(168, 168, 168), -3px -3px 6px white;
+  padding: 0px 13px;
+}
+.header .cartbox .cartlist .cartcard .image {
+  width: 33%;
+  padding: 5px;
+}
+.header .cartbox .cartlist .cartcard .image img {
+  width: 100%;
+  aspect-ratio: 1/1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 5px;
+}
+.header .cartbox .cartlist .cartcard .image .quantity {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 2px 2px 6px rgb(143, 143, 143), -3px -3px 4px white;
+  padding: 2px;
+  border-radius: 5px;
+  flex-direction: row-reverse;
+  color: black;
+}
+.header .cartbox .cartlist .cartcard .image .quantity .add {
+  cursor: pointer;
+  display: flex;
+}
+.header .cartbox .cartlist .cartcard .image .quantity .remove {
+  cursor: pointer;
+  display: flex;
+}
+.header .cartbox .cartlist .cartcard .info {
+  width: 60%;
+  padding: 5px;
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+}
+.header .cartbox .cartlist .cartcard .info .price .each {
+  letter-spacing: 1px;
+  color: rgb(164, 109, 0);
+}
+.header .cartbox .cartlist .cartcard .info .price .total {
+  color: rgb(0, 121, 45);
+  letter-spacing: 1px;
+}
+.header .cartbox .cartlist .cartcard .deletecart {
+  display: flex;
+  align-items: center;
+}
+.header .cartbox .cartlist .cartcard .deletecart ion-icon {
+  box-shadow: 2px 2px 6px rgb(106, 106, 106), -2px -2px 6px white;
+  font-size: 30px;
+  border-radius: 50%;
+  padding: 3px;
+  color: rgb(114, 114, 114);
+}
+.header .cartbox .cartfooter {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  color: rgb(155, 155, 155);
+  font-weight: 600;
+}
+.header .cartbox .cartfooter .subtotal {
+  color: rgb(18, 128, 158);
+}
+.header .cartbox .cartfooter .order a {
+  border-radius: 5px;
+  padding: 3px 15px;
+  box-shadow: 2px 2px 6px rgb(144, 144, 144), -3px -3px 6px white;
+  font-weight: 600;
+  color: rgb(109, 109, 109);
+  letter-spacing: 1.5px;
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 500px) {
