--- a/css/style.scss
+++ b/css/style.scss
@@ -16,8 +16,9 @@ overflow: hidden;
   max-width: 1200px;
 }
 .header {
-  position: relative;
-  border-bottom: 1px solid rgb(169, 169, 169);
+background: rgb(226, 232, 243);
+width: 100%;
+
   display: flex;
   justify-content: space-between;
   padding: 10px;
@@ -105,7 +106,7 @@ overflow: hidden;
     transition: 1s;
     position: absolute;
     top: 100%;
-    right:-50%;
+    right:-400%;
     background: rgb(224, 224, 224);
     color: aliceblue;
     padding: 10px;
