--- a/css/style.scss
+++ b/css/style.scss
@@ -10,15 +10,15 @@ body {
   background: rgb(227, 230, 245);
 }
 .container {
-overflow: hidden;
+  overflow: hidden;
   margin: auto;
   width: 100%;
   max-width: 1200px;
 }
 .header {
-background: rgb(226, 232, 243);
-width: 100%;
-
+  background: rgb(226, 232, 243);
+  width: 100%;
+  position: relative;
   display: flex;
   justify-content: space-between;
   padding: 10px;
@@ -106,7 +106,7 @@ width: 100%;
     transition: 1s;
     position: absolute;
     top: 100%;
-    right:-400%;
+    right: -400%;
     background: rgb(224, 224, 224);
     color: aliceblue;
     padding: 10px;
@@ -123,7 +123,7 @@ width: 100%;
         padding: 5px;
         border-radius: 5px;
         ion-icon {
-       margin: 0px 10px;
+          margin: 0px 10px;
         }
       }
       .closecart {
@@ -131,11 +131,10 @@ width: 100%;
         justify-content: center;
         align-items: center;
         padding: 5px;
-       color: aqua;
+        color: aqua;
         background: rgb(39, 39, 39);
         ion-icon {
           font-size: 24px;
-        
         }
       }
     }
@@ -207,7 +206,7 @@ width: 100%;
           display: flex;
           align-items: center;
           ion-icon {
-        box-shadow: 2px 2px 6px rgb(106, 106, 106), -2px -2px 6px white;
+            box-shadow: 2px 2px 6px rgb(106, 106, 106), -2px -2px 6px white;
             font-size: 30px;
             border-radius: 50%;
             padding: 3px;
@@ -223,16 +222,15 @@ width: 100%;
       color: rgb(155, 155, 155);
       font-weight: 600;
       .subtotal {
-color: rgb(18, 128, 158);
+        color: rgb(18, 128, 158);
       }
       .order {
-   
-        a{
+        a {
           border-radius: 5px;
           padding: 3px 15px;
-        box-shadow: 2px 2px 6px rgb(144, 144, 144), -3px -3px 6px white;
+          box-shadow: 2px 2px 6px rgb(144, 144, 144), -3px -3px 6px white;
 
-      font-weight: 600;
+          font-weight: 600;
           color: rgb(109, 109, 109);
           letter-spacing: 1.5px;
           text-decoration: none;
@@ -286,3 +284,4 @@ color: rgb(18, 128, 158);
 @import "form";
 @import "home";
 @import "shop";
+@import "user";
