--- a/css/_user.scss
+++ b/css/_user.scss
@@ -1,3 +1,172 @@
-.userbox{
-    border: 1px solid black;
+.userbox {
+  .main {
+    .userhead {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px;
+      .back {
+        ion-icon {
+          font-size: 30px;
+        }
+      }
+      .image {
+        img {
+          width: 100px;
+          border-radius: 50%;
+        }
+      }
+      .edit {
+        a {
+          background: rgb(39, 39, 39);
+          padding: 3px 10px;
+          border-radius: 4px;
+          text-decoration: none;
+          color: rgb(243, 243, 243);
+          font-size: 22px;
+        }
+      }
+    }
+    .usercontent {
+      .orders,
+      .userinfos {
+        margin: 10px;
+        text-align: center;
+        .title {
+          border: 1px solid rgb(66, 66, 66);
+          color: aliceblue;
+          background: rgb(69, 69, 69);
+          width: 90%;
+          margin: auto;
+          border-radius: 5px;
+        }
+        .orderbox {
+          .order {
+            display: flex;
+      box-shadow: 3px 3px 6px rgb(184, 184, 184), -3px -3px 6px white;
+            width: 95%;
+            margin: 20px auto;
+            border-radius: 10px;
+            align-items: center;
+            padding: 10px;
+            justify-content: space-between;
+            .image {
+              margin: 5px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              img {
+                width: 20vmin;
+              }
+            }
+            .name {
+              margin: 5px;
+            }
+            .price {
+              margin: 5px;
+            }
+            .quantity {
+              margin: 5px;
+            }
+            .totalprice {
+              margin: 5px;
+            }
+            .time {
+              margin: 5px;
+            }
+            .status {
+              margin: 5px;
+              background: rgb(11, 109, 55);
+              padding: 10px;
+              color: aliceblue;
+              border-radius: 4px;
+            }
+          }
+        }
+        .infobox {
+          padding: 10px;
+          border-radius: 10px;
+          width: max-content;
+          margin: 20px auto;
+          display: flex;
+          text-align: left;
+          flex-direction: column;
+          border: 1px solid rgb(141, 141, 141);
+          span {
+            margin: 10px 0px;
+            font-weight: 500;
+            color: rgb(60, 60, 60);
+            .bold {
+              background: rgb(255, 255, 255);
+              margin: 0px 10px;
+              padding: 5px 15px;
+              font-weight: 900;
+              color: rgb(28, 28, 28);
+              border-radius: 5px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// --------------------------
+@media only screen and (max-width: 750px) {
+  .userbox {
+    .main {
+      .userhead {
+        .back {
+          ion-icon {
+            font-size: 30px;
+          }
+        }
+        .image {
+          img {
+          }
+        }
+        .edit {
+          a {
+          }
+        }
+      }
+      .usercontent {
+        .orders,
+        .userinfos {
+          .title {
+          }
+          .orderbox {
+            .order {
+              flex-direction: column;
+              .image {
+                img {
+                  width: 20vmin;
+                }
+              }
+              .name {
+                margin: 5px;
+              }
+              .price {
+                margin: 5px;
+              }
+              .quantity {
+                margin: 5px;
+              }
+              .totalprice {
+                margin: 5px;
+              }
+              .time {
+                margin: 5px;
+              }
+              .status {
+              }
+            }
+          }
+          .infobox {
+            span {
+            }
+          }
+        }
+      }
+    }
+  }
 }
